[project]
name = "hyperdb_py"
version = "0.1.1"
authors = [
  { name="Afaan Bilal", email="afaanbilal@gmail.com" },
]
description = "HyperDB Python Client"
keywords = ["hyperdb", "client", "in-memory"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AfaanBilal/hyperdb-py"
"Bug Tracker" = "https://github.com/AfaanBilal/hyperdb-py/issues"
"Source" = "https://github.com/AfaanBilal/hyperdb-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
